# 2D_Engine

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.h  EntityPlayer.cpp  EntityPlayer.h  GUI.cpp  GUI.h  GUIHandler.cpp  GUIHandler.h  GameObject.cpp  GameObject.h  GameObjectHandler.cpp  GameObjectHandler.h  GameObjectPool.cpp  GameObjectPool.h  GameRunner.cpp  GameRunner.h  IGameObject.h  ITexture.h  README.md  SimpleGameObject.cpp  SimpleGameObject.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Tile.cpp  Tile.h  TilePool.cpp  TilePool.h  TileRenderer.cpp  TileRenderer.h  Timer.cpp  Timer.h  World.cpp  World.h  main.cpp
Shooter/: Entity.h  EntityBullet.cpp  EntityBullet.h  EntityGunman.cpp  EntityGunman.h  ShooterRunner.cpp  ShooterRunner.h  ShooterTextures.cpp  ShooterTextures.h
cmake/: FindSDL2_ttf.cmake
objects/: GameObject.cpp  Timer.cpp  Timer.h  World.cpp
objects/block/: GameObject.cpp  Tile.cpp
objects/block/headers/: GameObject.h  Tile.h
objects/entity/headers/: EntityPlayer.h
objects/entity/player/: EntityPlayer.cpp  EntityPlayer.h
objects/gui/: GUI.cpp
objects/gui/headers/: GUI.h
objects/handlers/: GUIHandler.cpp  GameObjectHandler.cpp
objects/handlers/headers/: GUIHandler.h  GameObjectHandler.h
objects/headers/: GameObject.h  UpdateAndRender.h  World.h
snake/: EntitySnake.cpp  EntitySnake.h  EntityTail.cpp  EntityTail.h  Fruit.cpp  Fruit.h  Point.h  SnakeRunner.cpp  SnakeRunner.h  SnakeWorld.cpp  SnakeWorld.h  runSnake.cpp
textures/: Texture.cpp  Texture.h
textures/sprites/renderers/: SpriteRenderer.cpp  (+2 more)
(+2 files in other folders)
